infra/k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-vanilla-ingress
spec:
  rules:
    - host: dev.app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-vanilla-frontend
                port:
                  number: 80
    - host: dev-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-vanilla-backend
                port:
                  number: 8000
